--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"hscbybhs":"sdaw","privacy":"https://66616666.com","toksle":"s024ewa","opnsels":"sdess","appbar":"sdnnwe"}
+{"hscbybhs":null,"privacy":null,"toksle":null,"opnsels":null,"appbar":null}
