--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"hscbybhs":"sdas","privacy":"https://66616666.com","toksle":"sdawwww","opnsels":"sdawenxba","appbar":"snxmake"}
+{"hscbybhs":null,"privacy":"https://66616666.com","toksle":null,"opnsels":"sdawenxba","appbar":"snxmake"}
